--- a/SmartShop/app/build.gradle
+++ b/SmartShop/app/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-analytics:16.0.4'
     implementation 'com.google.android.gms:play-services-vision:16.2.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.yarolegovich:sliding-root-nav:1.1.0'
 }
+
 apply plugin: 'com.google.gms.google-services'
