--- a/SmartShop/app/src/main/AndroidManifest.xml
+++ b/SmartShop/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".sign_up"
             android:theme="@style/MyTheme" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/MyTheme"/>
         <activity android:name=".ProfileActivity"
             android:theme="@style/MyTheme"/>
         <activity android:name=".scanner" />
