--- a/SmartShop/app/src/main/AndroidManifest.xml
+++ b/SmartShop/app/src/main/AndroidManifest.xml
@@ -26,17 +26,20 @@
         <activity
             android:name=".sign_up"
             android:theme="@style/MyTheme" />
-        <activity android:name=".MainActivity"
-            android:theme="@style/MyTheme"/>
-        <activity android:name=".ProfileActivity"
-            android:theme="@style/MyTheme"/>
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/MyTheme" />
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/MyTheme" />
         <activity android:name=".scanner" />
 
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
 
-        <activity android:name=".profile_edit"></activity>
+        <activity android:name=".profile_edit" />
+        <activity android:name=".cart"></activity>
     </application>
 
 </manifest>
